# data-warehousing-with-polars

./: .gitignore  Cargo.toml  README.md  great-docs.yml  main.py  pyproject.toml
.github/skills/release-dwp/: SKILL.md
.github/skills/release-polars-list-ext/: SKILL.md
.github/workflows/: docs.yml  munich_cycling.yml  munich_monatszahlen.yml  publish-dwp.yml  publish-polars-list-ext.yml  qa.yml
app/: example_incremental.py  munich_cycling.py  munich_monatszahlen.py
blog/: 01-why-polars-delta-warehouse.qmd  02-watermarks-idempotent-ingestion.qmd  03-scd-type-1-2-4.qmd  04-schema-validation-first-class.qmd  05-fan-in-and-delta-cdf.qmd  06-table-maintenance-compaction-vacuum.qmd  07-real-world-munich-datasets.qmd  08-custom-sources-http-and-apis.qmd
examples/: munich-accidents.qmd  munich-airport.qmd  munich-cycling.qmd  munich-ev.qmd  munich-labor.qmd  munich-tourism.qmd
src/data_warehousing_with_polars/: __init__.py  cloud.py  incremental.py  maintenance.py  record_batch_source.py  scd.py  schema.py
tests/: _memory_impl.py  conftest.py  test_cloud.py  test_incremental.py  test_munich_monatszahlen.py  test_scd.py
