[project]
name = "data-warehousing-with-polars"
version = "0.1.0"
description = "ACID data warehousing with Polars and Delta Lake"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.30.0",
    "deltalake>=0.22.3",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.0",
    "polars-cloud>=0.6.3",
]
[project.urls]
repository = "https://github.com/AlexanderNenninger/data-warehousing-with-polars"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "altair>=6.1.0",
    "great-docs>=0.11.0",
    "poethepoet>=0.46.0",
    "psutil>=7.2.2",
    "pytest>=9.0.3",
    "pytest-forked>=1.6.0",
    "pytest-memray>=1.8.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
line-length = 100


[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.poe.tasks]
fmt = "ruff format src tests app"
lint = "ruff check src tests app --fix --unsafe-fixes"
typecheck = "ty check src app"
test = "pytest tests/ --ignore=tests/test_memory.py -v"
test_memory = "pytest tests/test_memory.py -v"
test_min_versions.sequence = [
    { cmd = "uv sync --resolution=lowest-direct" },
    { cmd = "pytest tests/ --ignore=tests/test_memory.py -v" },
    { cmd = "uv sync" },
]
qa.sequence = ["fmt", "lint", "typecheck", "test", "test_memory"]
